# tinyml-benchmarks

./: .gitignore  CMakeLists.txt  README.md  run_all.sh
benchmarks/: CMakeLists.txt
benchmarks/aww/: CMakeLists.txt
